hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/shape_tuple_coercion.php.exp
File "shape_tuple_coercion.php", line 10, characters 47-48:
Invalid argument (Typing[4110])
  File "shape_tuple_coercion.php", line 10, characters 21-37:
  Expected `shape('a' => int)`
  File "shape_tuple_coercion.php", line 4, characters 24-24:
    via this generic `T`
  File "shape_tuple_coercion.php", line 9, characters 30-36:
  But got `dynamic`
File "shape_tuple_coercion.php", line 11, characters 43-44:
Invalid argument (Typing[4110])
  File "shape_tuple_coercion.php", line 11, characters 21-33:
  Expected `(int, string)`
  File "shape_tuple_coercion.php", line 4, characters 24-24:
    via this generic `T`
  File "shape_tuple_coercion.php", line 9, characters 30-36:
  But got `dynamic`
